@@ -65,6 +65,7 @@ NOTE: Someone remove duplication between 0.8.7f and 0.8.8
 -bug#0001989: IE9 breaks Cacti when objects are hidden using 'display:none;' style tag
 -bug#0001993: "Undefined index: height in /var/www/html/cacti/lib/html.php on line 147" in PHP error log
 -bug#0001995: $_SERVER["REQUEST_URI"] not properly escaped in graph_view.php for preview mode 
+-bug#0002005: Saving Script Server or Script Data Input Method Results in SQL Error
 -bug: remove graph permissions if graph is removed
 -bug: remove host permissions if host is removed
 -bug: add_tree.php did not allow nodes with propagating sort options
